--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <!-- Styles -->
-    <link rel="stylesheet" href="./main.css">
+    <!-- <link rel="stylesheet" href="./main.css"> -->
 
     <!--GA-->
     <script>
